Updated Footer , Operating Hours

--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -4,7 +4,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
-    background-color: #0077b6;
+    background-color: #4fb5ec;
     color: white;
     font-family: 'Poppins', sans-serif;
     position: sticky;
@@ -83,4 +83,4 @@
       color: white;
     }
   }
-  
+
